Correção no relatório para buscar a lotação correta no caso de existir lotações com a mesma sigla em órgãos diferentes.